--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,11 +42,13 @@ body, html {
   letter-spacing: 4px;
   font-weight: 400;
   margin-top: 30px;
+  animation: moveInTop 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 #head-3{
   font-family: 'Iceland', sans-serif;
   font-size: 250%;
+  animation: moveInBottom 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 #head-4{
@@ -61,6 +63,40 @@ body, html {
   font-family: 'Quicksand',sans-serif;
   font-size: 120%;
   line-height: 1.5em;
+}
+
+@keyframes moveInTop{
+  0%{
+    opacity: 0;
+    transform : translateY(-100px);
+  }
+
+  100%{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes moveInBottom{
+  0%{
+    opacity: 0;
+    transform : translateY(100px);
+  }
+
+  100%{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeIn{
+  0%{
+    opacity: 0;
+  }
+
+  100%{
+    opacity: 1;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -117,6 +153,7 @@ a:active {color: #416467;}
     background-color: rgba(240, 128, 128, 0);
     width: 100%;
     height: 100%;
+  
 }
 
 
@@ -146,7 +183,10 @@ a:active {color: #416467;}
 ----------------------------------------*/
 
 .timing {
-	margin-top: 30px;
+  margin-top: 30px;
+  animation: fadeIn 2s ease-in 1s;
+  animation-fill-mode: forwards;
+  opacity: 0;
 }
 .time_circles > div > h4 {
 	color: #EDB400;
