--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,7 @@ a:active {color: #416467;}
 ----------------------------------------*/
 
 .bg {  
+  overscroll-behavior: none;
 	position: relative;
 	text-align:center;
 }
